--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -14,8 +14,7 @@
     
     <ul class="nav-links">
       <li><a href="#features">Features</a></li>
-      <li><a href="#bot-suite">Bot Suite</a></li>
-      <li><a href="#pricing">Pricing</a></li>
+      <li><a href="#plans">Plans</a></li>
       <li><a href="#faq">FAQ</a></li>
       
       <!-- Login/Account Icon -->
