--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -3,7 +3,7 @@
   Pricing section with green theme
 {% endcomment %}
 
-<section class="pricing-section" id="plans">
+<section class="pricing-section" id="pricing">
   <div class="container">
     <div class="section-header">
       <h2>{{ section.settings.section_title }}</h2>
