Adjsuted Nav version to scroll again

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -3,7 +3,7 @@
   Site header with navigation
 {% endcomment %}
 
-<nav class="navbar site-header">
+<nav class="navbar">
   <div class="container">
     <a href="/" class="logo">
       <span class="logo-icon">
