--- a/assets/layout.css
+++ b/assets/layout.css
@@ -39,7 +39,7 @@ section {
     margin: 0 auto;
 }
 
-/* Navbar 
+/* Navbar */
 .navbar {
     position: fixed;
     top: 0;
@@ -57,7 +57,7 @@ section {
     justify-content: space-between;
     align-items: center;
 }
-*/
+
 .logo {
     display: flex;
     align-items: center;
